src/y.output
Terminals unused in grammar

   ASSERT
   AUTO
   BREAK
   CASE
   CATCH
   CONST
   CONTINUE
   DO
   ENUM
   EXTENDS
   FINALLY
   GOTO
   NEW
   SWITCH
   THROW
   TRY
   WHILE
   _AT
   _ELLIPSIS
   QUESTION
   DCOLON
   DEFAULT_VAL
   ARROW


State 50 conflicts: 4 shift/reduce
State 62 conflicts: 1 shift/reduce
State 63 conflicts: 1 shift/reduce
State 88 conflicts: 4 shift/reduce
State 89 conflicts: 4 shift/reduce
State 94 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce
State 150 conflicts: 2 reduce/reduce
State 209 conflicts: 36 shift/reduce
State 211 conflicts: 36 shift/reduce
State 212 conflicts: 36 shift/reduce
State 213 conflicts: 36 shift/reduce
State 214 conflicts: 36 shift/reduce
State 215 conflicts: 36 shift/reduce
State 284 conflicts: 1 shift/reduce
State 291 conflicts: 36 shift/reduce
State 292 conflicts: 36 shift/reduce
State 293 conflicts: 36 shift/reduce
State 294 conflicts: 36 shift/reduce
State 295 conflicts: 36 shift/reduce
State 296 conflicts: 36 shift/reduce
State 297 conflicts: 36 shift/reduce
State 298 conflicts: 36 shift/reduce
State 299 conflicts: 36 shift/reduce
State 300 conflicts: 36 shift/reduce
State 301 conflicts: 36 shift/reduce
State 302 conflicts: 36 shift/reduce
State 303 conflicts: 36 shift/reduce
State 304 conflicts: 36 shift/reduce
State 305 conflicts: 36 shift/reduce
State 306 conflicts: 36 shift/reduce
State 307 conflicts: 36 shift/reduce
State 308 conflicts: 36 shift/reduce
State 309 conflicts: 36 shift/reduce
State 310 conflicts: 36 shift/reduce
State 328 conflicts: 1 shift/reduce


Grammar

    0 $accept: CompilationUnit $end

    1 CompilationUnit: PackageDecl ImportDeclListOptional TypeDeclListOptional
    2                | ImportDeclListOptional TypeDeclListOptional

    3 PackageDecl: PACKAGE QualifiedName SEMIC

    4 ImportDeclListOptional: ImportDeclListOptional ImportDecl
    5                       | %empty

    6 ImportDecl: SingleImportDecl
    7           | TypeImportDecl

    8 SingleImportDecl: IMPORT QualifiedName SEMIC
    9                 | IMPORT STATIC QualifiedName SEMIC

   10 TypeImportDecl: IMPORT QualifiedName DOT MUL SEMIC
   11               | IMPORT STATIC QualifiedName DOT MUL SEMIC

   12 TypeDeclListOptional: TypeDeclListOptional TypeDecl
   13                     | %empty

   14 TypeDecl: ClassOrInterfaceModifierListOptional ClassDecl
   15         | ClassOrInterfaceModifierListOptional InterfaceDecl
   16         | SEMIC

   17 ClassDecl: CLASS IDENTIFIER ClassBody
   18          | CLASS IDENTIFIER IMPLEMENTS TypeList ClassBody

   19 InterfaceDecl: INTERFACE IDENTIFIER InterfaceBody

   20 ClassBody: LBRACE RBRACE
   21          | LBRACE ClassBodyDeclList RBRACE

   22 ClassBodyDeclList: ClassBodyDecl
   23                  | ClassBodyDeclList ClassBodyDecl

   24 ClassBodyDecl: ModifierList MemberDecl
   25              | MemberDecl

   26 ForControl: EnhancedForControl
   27           | ForInitOptional SEMIC Expression SEMIC ExpressionList
   28           | ForInitOptional SEMIC SEMIC ExpressionList
   29           | ForInitOptional SEMIC Expression SEMIC
   30           | ForInitOptional SEMIC SEMIC

   31 EnhancedForControl: VariableModifierList TypeType VariableDeclaratorId COLON Expression
   32                   | TypeType VariableDeclaratorId COLON Expression

   33 ForInitOptional: ForInit
   34                | %empty

   35 ForInit: LocalVariableDecl
   36        | ExpressionList

   37 MethodCall: IDENTIFIER LPAREN ExpressionList RPAREN
   38           | IDENTIFIER LPAREN RPAREN

   39 Expression: Primary
   40           | Expression DOT IDENTIFIER
   41           | Expression DOT MethodCall
   42           | Expression LBRACK Expression RBRACK
   43           | MethodCall
   44           | Expression INCRE
   45           | Expression DECRE
   46           | ADD Expression
   47           | SUB Expression
   48           | INCRE Expression
   49           | DECRE Expression
   50           | TILDE Expression
   51           | BANG Expression
   52           | Expression MUL Expression
   53           | Expression DIV Expression
   54           | Expression MOD Expression
   55           | Expression ADD Expression
   56           | Expression SUB Expression
   57           | Expression LSHIFT Expression
   58           | Expression RSHIFT Expression
   59           | Expression URSHIFT Expression
   60           | Expression LT Expression
   61           | Expression GT Expression
   62           | Expression LTOE Expression
   63           | Expression GTOE Expression
   64           | Expression INSTANCEOF TypeType
   65           | Expression EQUAL Expression
   66           | Expression NEQUAL Expression
   67           | Expression BITAND Expression
   68           | Expression CARET Expression
   69           | Expression BITOR Expression
   70           | Expression AND Expression
   71           | Expression OR Expression
   72           | Expression AssignOperators Expression

   73 AssignOperators: ASSIGN
   74                | ADD_ASSIGN
   75                | SUB_ASSIGN
   76                | MUL_ASSIGN
   77                | DIV_ASSIGN
   78                | MOD_ASSIGN
   79                | AND_ASSIGN
   80                | OR_ASSIGN
   81                | XOR_ASSIGN
   82                | RSHIFT_ASSIGN
   83                | URSHIFT_ASSIGN
   84                | LSHIFT_ASSIGN

   85 ParExpression: LPAREN Expression RPAREN

   86 ExpressionList: Expression
   87               | ExpressionList COMMA Expression

   88 Primary: LPAREN Expression RPAREN
   89        | THIS
   90        | SUPER
   91        | Literal
   92        | IDENTIFIER
   93        | TypeTypeOrVoid DOT CLASS

   94 ModifierList: Modifier
   95             | ModifierList Modifier

   96 VariableModifier: FINAL

   97 MethodBody: Block
   98           | COMMA

   99 InterfaceBody: LPAREN RPAREN
  100              | LPAREN InterfaceBodyDeclList RPAREN

  101 InterfaceBodyDeclList: InterfaceBodyDecl
  102                      | InterfaceBodyDeclList InterfaceBodyDecl

  103 FieldDecl: TypeType VariableDeclarators SEMIC

  104 InterfaceBodyDecl: InterfaceMemberDecl
  105                  | ModifierList InterfaceMemberDecl
  106                  | SEMIC

  107 InterfaceMemberDecl: InterfaceMethodDecl
  108                    | InterfaceDecl
  109                    | ClassDecl

  110 InterfaceMethodDecl: InterfaceMethodModifierListOptional TypeTypeOrVoid IDENTIFIER FormalParams LRBrackListOptional THROWS QualifiedNameList MethodBody
  111                    | InterfaceMethodModifierListOptional TypeTypeOrVoid IDENTIFIER FormalParams LRBrackListOptional MethodBody

  112 InterfaceMethodModifierListOptional: InterfaceMethodModifierListOptional InterfaceMethodModifier
  113                                    | %empty

  114 InterfaceMethodModifier: PUBLIC
  115                        | ABSTRACT
  116                        | DEFAULT
  117                        | STATIC
  118                        | STRICTFP

  119 FormalParams: LPAREN FormalParameterWithCommaList RPAREN
  120             | LPAREN RPAREN

  121 FormalParameterWithCommaList: FormalParam
  122                             | FormalParameterWithCommaList COMMA FormalParam

  123 FormalParam: TypeType VariableDeclaratorId

  124 QualifiedNameList: QualifiedName
  125                  | QualifiedNameList COMMA QualifiedName

  126 VariableModifierList: VariableModifier
  127                     | VariableModifierList VariableModifier

  128 PrimitiveType: BOOLEAN
  129              | CHAR
  130              | BYTE
  131              | SHORT
  132              | INT
  133              | LONG
  134              | FLOAT
  135              | DOUBLE

  136 ClassOrInterfaceType: IDENTIFIER DotClassOrInterfaceTypeList

  137 DotClassOrInterfaceTypeList: DotClassOrInterfaceTypeList DOT IDENTIFIER
  138                            | %empty

  139 TypeType: ClassOrInterfaceType LRBrackListOptional
  140         | PrimitiveType LRBrackListOptional

  141 TypeTypeOrVoid: TypeType
  142               | VOID

  143 ConstructorDecl: IDENTIFIER FormalParams THROWS QualifiedNameList Block
  144                | IDENTIFIER FormalParams Block

  145 TypeList: TypeType
  146         | TypeList COMMA TypeType

  147 VariableDeclarators: VariableDeclarator
  148                    | VariableDeclarators COMMA VariableDeclarator

  149 VariableDeclarator: VariableDeclaratorId
  150                   | VariableDeclaratorId ASSIGN VariableInitializer

  151 VariableDeclaratorId: IDENTIFIER LRBrackList
  152                     | IDENTIFIER

  153 VariableInitializer: ArrayInitializer
  154                    | Expression

  155 VariableInitializerListWithComma: VariableInitializer
  156                                 | VariableInitializerListWithComma COMMA VariableInitializer

  157 ArrayInitializer: LBRACE VariableInitializerListWithComma COMMA RBRACE
  158                 | LBRACE VariableInitializerListWithComma RBRACE
  159                 | LBRACE RBRACE

  160 Block: LBRACE BlockStatementList RBRACE
  161      | LBRACE RBRACE

  162 BlockStatementList: BlockStatement
  163                   | BlockStatementList BlockStatement

  164 BlockStatement: LocalVariableDecl SEMIC
  165               | Statement

  166 LocalVariableDecl: VariableModifierList TypeType VariableDeclarators
  167                  | TypeType VariableDeclarators

  168 Statement: Block
  169          | IF ParExpression Statement ELSE Statement
  170          | IF ParExpression Statement
  171          | FOR LPAREN ForControl RPAREN Statement
  172          | RETURN Expression SEMIC
  173          | RETURN SEMIC
  174          | SEMIC
  175          | Expression SEMIC

  176 MemberDecl: MethodDecl
  177           | FieldDecl
  178           | ConstructorDecl
  179           | InterfaceDecl

  180 MethodDecl: TypeType IDENTIFIER FormalParams LRBrackListOptional THROWS QualifiedNameList MethodBody
  181           | VOID IDENTIFIER FormalParams LRBrackListOptional THROWS QualifiedNameList MethodBody
  182           | TypeType IDENTIFIER FormalParams LRBrackListOptional MethodBody
  183           | VOID IDENTIFIER FormalParams LRBrackListOptional MethodBody

  184 QualifiedName: IDENTIFIER
  185              | QualifiedName DOT IDENTIFIER

  186 Modifier: ClassOrInterfaceModifier
  187         | NATIVE
  188         | SYNCHRONIZED
  189         | TRANSIENT
  190         | VOLATILE

  191 ClassOrInterfaceModifierListOptional: ClassOrInterfaceModifierList
  192                                     | %empty

  193 ClassOrInterfaceModifierList: ClassOrInterfaceModifier
  194                             | ClassOrInterfaceModifierList ClassOrInterfaceModifier

  195 ClassOrInterfaceModifier: PUBLIC
  196                         | PRIVATE
  197                         | PROTECTED
  198                         | STATIC
  199                         | ABSTRACT
  200                         | FINAL
  201                         | STRICTFP

  202 Literal: IntegerLiteral
  203        | FloatLiteral
  204        | CHAR_LITERAL
  205        | STRING_LITERAL
  206        | TRUE_LITERAL
  207        | FALSE_LITERAL
  208        | NULL_LITERAL

  209 IntegerLiteral: DECIMAL_LITERAL
  210               | HEX_LITERAL
  211               | OCT_LITERAL
  212               | BINARY_LITERAL

  213 FloatLiteral: FLOAT_LITERAL
  214             | HEXFLOAT_LITERAL

  215 LRBrackListOptional: LRBrackList
  216                    | %empty

  217 LRBrackList: LBRACK RBRACK
  218            | LRBrackList LBRACK RBRACK


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 17 18 19 37 38 40 92 110 111 136 137 143 144 151 152
    180 181 182 183 184 185
DECIMAL_LITERAL (259) 209
HEX_LITERAL (260) 210
OCT_LITERAL (261) 211
BINARY_LITERAL (262) 212
FLOAT_LITERAL (263) 213
HEXFLOAT_LITERAL (264) 214
CHAR_LITERAL (265) 204
STRING_LITERAL (266) 205
ABSTRACT (267) 115 199
ASSERT (268)
AUTO (269)
BOOLEAN (270) 128
BREAK (271)
BYTE (272) 130
CASE (273)
CATCH (274)
CHAR (275) 129
CLASS (276) 17 18 93
CONST (277)
CONTINUE (278)
DEFAULT (279) 116
DO (280)
DOUBLE (281) 135
ELSE (282) 169
ENUM (283)
EXTENDS (284)
FINAL (285) 96 200
FINALLY (286)
FLOAT (287) 134
FOR (288) 171
IF (289) 169 170
GOTO (290)
IMPLEMENTS (291) 18
IMPORT (292) 8 9 10 11
INSTANCEOF (293) 64
INT (294) 132
INTERFACE (295) 19
LONG (296) 133
NATIVE (297) 187
NEW (298)
PACKAGE (299) 3
PRIVATE (300) 196
PROTECTED (301) 197
PUBLIC (302) 114 195
RETURN (303) 172 173
SHORT (304) 131
STATIC (305) 9 11 117 198
STRICTFP (306) 118 201
SUPER (307) 90
SWITCH (308)
SYNCHRONIZED (309) 188
THIS (310) 89
THROW (311)
THROWS (312) 110 143 180 181
TRANSIENT (313) 189
TRY (314)
VOID (315) 142 181 183
VOLATILE (316) 190
WHILE (317)
_AT (318)
_ELLIPSIS (319)
ASSIGN (320) 73 150
TILDE (321) 50
QUESTION (322)
DCOLON (323)
COLON (324) 31 32
LPAREN (325) 37 38 85 88 99 100 119 120 171
RPAREN (326) 37 38 85 88 99 100 119 120 171
LBRACE (327) 20 21 157 158 159 160 161
RBRACE (328) 20 21 157 158 159 160 161
LBRACK (329) 42 217 218
RBRACK (330) 42 217 218
DOT (331) 10 11 40 41 93 137 185
COMMA (332) 87 98 122 125 146 148 156 157
SEMIC (333) 3 8 9 10 11 16 27 28 29 30 103 106 164 172 173 174 175
BANG (334) 51
LT (335) 60
GT (336) 61
BITAND (337) 67
BITOR (338) 69
CARET (339) 68
ADD (340) 46 55
SUB (341) 47 56
MUL (342) 10 11 52
DIV (343) 53
MOD (344) 54
EQUAL (345) 65
NEQUAL (346) 66
LTOE (347) 62
GTOE (348) 63
AND (349) 70
OR (350) 71
LSHIFT (351) 57
RSHIFT (352) 58
INCRE (353) 44 48
DEFAULT_VAL (354)
ARROW (355)
DECRE (356) 45 49
ADD_ASSIGN (357) 74
SUB_ASSIGN (358) 75
MUL_ASSIGN (359) 76
DIV_ASSIGN (360) 77
AND_ASSIGN (361) 79
OR_ASSIGN (362) 80
XOR_ASSIGN (363) 81
MOD_ASSIGN (364) 78
LSHIFT_ASSIGN (365) 84
RSHIFT_ASSIGN (366) 82
URSHIFT (367) 59
URSHIFT_ASSIGN (368) 83
NULL_LITERAL (369) 208
TRUE_LITERAL (370) 206
FALSE_LITERAL (371) 207


Nonterminals, with rules where they appear

$accept (117)
    on left: 0
CompilationUnit (118)
    on left: 1 2, on right: 0
PackageDecl (119)
    on left: 3, on right: 1
ImportDeclListOptional (120)
    on left: 4 5, on right: 1 2 4
ImportDecl (121)
    on left: 6 7, on right: 4
SingleImportDecl (122)
    on left: 8 9, on right: 6
TypeImportDecl (123)
    on left: 10 11, on right: 7
TypeDeclListOptional (124)
    on left: 12 13, on right: 1 2 12
TypeDecl (125)
    on left: 14 15 16, on right: 12
ClassDecl (126)
    on left: 17 18, on right: 14 109
InterfaceDecl (127)
    on left: 19, on right: 15 108 179
ClassBody (128)
    on left: 20 21, on right: 17 18
ClassBodyDeclList (129)
    on left: 22 23, on right: 21 23
ClassBodyDecl (130)
    on left: 24 25, on right: 22 23
ForControl (131)
    on left: 26 27 28 29 30, on right: 171
EnhancedForControl (132)
    on left: 31 32, on right: 26
ForInitOptional (133)
    on left: 33 34, on right: 27 28 29 30
ForInit (134)
    on left: 35 36, on right: 33
MethodCall (135)
    on left: 37 38, on right: 41 43
Expression (136)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72, on right: 27 29
    31 32 40 41 42 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61 62 63 64 65 66 67 68 69 70 71 72 85 86 87 88 154 172 175
AssignOperators (137)
    on left: 73 74 75 76 77 78 79 80 81 82 83 84, on right: 72
ParExpression (138)
    on left: 85, on right: 169 170
ExpressionList (139)
    on left: 86 87, on right: 27 28 36 37 87
Primary (140)
    on left: 88 89 90 91 92 93, on right: 39
ModifierList (141)
    on left: 94 95, on right: 24 95 105
VariableModifier (142)
    on left: 96, on right: 126 127
MethodBody (143)
    on left: 97 98, on right: 110 111 180 181 182 183
InterfaceBody (144)
    on left: 99 100, on right: 19
InterfaceBodyDeclList (145)
    on left: 101 102, on right: 100 102
FieldDecl (146)
    on left: 103, on right: 177
InterfaceBodyDecl (147)
    on left: 104 105 106, on right: 101 102
InterfaceMemberDecl (148)
    on left: 107 108 109, on right: 104 105
InterfaceMethodDecl (149)
    on left: 110 111, on right: 107
InterfaceMethodModifierListOptional (150)
    on left: 112 113, on right: 110 111 112
InterfaceMethodModifier (151)
    on left: 114 115 116 117 118, on right: 112
FormalParams (152)
    on left: 119 120, on right: 110 111 143 144 180 181 182 183
FormalParameterWithCommaList (153)
    on left: 121 122, on right: 119 122
FormalParam (154)
    on left: 123, on right: 121 122
QualifiedNameList (155)
    on left: 124 125, on right: 110 125 143 180 181
VariableModifierList (156)
    on left: 126 127, on right: 31 127 166
PrimitiveType (157)
    on left: 128 129 130 131 132 133 134 135, on right: 140
ClassOrInterfaceType (158)
    on left: 136, on right: 139
DotClassOrInterfaceTypeList (159)
    on left: 137 138, on right: 136 137
TypeType (160)
    on left: 139 140, on right: 31 32 64 103 123 141 145 146 166 167
    180 182
TypeTypeOrVoid (161)
    on left: 141 142, on right: 93 110 111
ConstructorDecl (162)
    on left: 143 144, on right: 178
TypeList (163)
    on left: 145 146, on right: 18 146
VariableDeclarators (164)
    on left: 147 148, on right: 103 148 166 167
VariableDeclarator (165)
    on left: 149 150, on right: 147 148
VariableDeclaratorId (166)
    on left: 151 152, on right: 31 32 123 149 150
VariableInitializer (167)
    on left: 153 154, on right: 150 155 156
VariableInitializerListWithComma (168)
    on left: 155 156, on right: 156 157 158
ArrayInitializer (169)
    on left: 157 158 159, on right: 153
Block (170)
    on left: 160 161, on right: 97 143 144 168
BlockStatementList (171)
    on left: 162 163, on right: 160 163
BlockStatement (172)
    on left: 164 165, on right: 162 163
LocalVariableDecl (173)
    on left: 166 167, on right: 35 164
Statement (174)
    on left: 168 169 170 171 172 173 174 175, on right: 165 169 170
    171
MemberDecl (175)
    on left: 176 177 178 179, on right: 24 25
MethodDecl (176)
    on left: 180 181 182 183, on right: 176
QualifiedName (177)
    on left: 184 185, on right: 3 8 9 10 11 124 125 185
Modifier (178)
    on left: 186 187 188 189 190, on right: 94 95
ClassOrInterfaceModifierListOptional (179)
    on left: 191 192, on right: 14 15
ClassOrInterfaceModifierList (180)
    on left: 193 194, on right: 191 194
ClassOrInterfaceModifier (181)
    on left: 195 196 197 198 199 200 201, on right: 186 193 194
Literal (182)
    on left: 202 203 204 205 206 207 208, on right: 91
IntegerLiteral (183)
    on left: 209 210 211 212, on right: 202
FloatLiteral (184)
    on left: 213 214, on right: 203
LRBrackListOptional (185)
    on left: 215 216, on right: 110 111 139 140 180 181 182 183
LRBrackList (186)
    on left: 217 218, on right: 151 215 218


State 0

    0 $accept: . CompilationUnit $end

    PACKAGE  shift, and go to state 1

    $default  reduce using rule 5 (ImportDeclListOptional)

    CompilationUnit         go to state 2
    PackageDecl             go to state 3
    ImportDeclListOptional  go to state 4


State 1

    3 PackageDecl: PACKAGE . QualifiedName SEMIC

    IDENTIFIER  shift, and go to state 5

    QualifiedName  go to state 6


State 2

    0 $accept: CompilationUnit . $end

    $end  shift, and go to state 7


State 3

    1 CompilationUnit: PackageDecl . ImportDeclListOptional TypeDeclListOptional

    $default  reduce using rule 5 (ImportDeclListOptional)

    ImportDeclListOptional  go to state 8


State 4

    2 CompilationUnit: ImportDeclListOptional . TypeDeclListOptional
    4 ImportDeclListOptional: ImportDeclListOptional . ImportDecl

    IMPORT  shift, and go to state 9

    $default  reduce using rule 13 (TypeDeclListOptional)

    ImportDecl            go to state 10
    SingleImportDecl      go to state 11
    TypeImportDecl        go to state 12
    TypeDeclListOptional  go to state 13


State 5

  184 QualifiedName: IDENTIFIER .

    $default  reduce using rule 184 (QualifiedName)


State 6

    3 PackageDecl: PACKAGE QualifiedName . SEMIC
  185 QualifiedName: QualifiedName . DOT IDENTIFIER

    DOT    shift, and go to state 14
    SEMIC  shift, and go to state 15


State 7

    0 $accept: CompilationUnit $end .

    $default  accept


State 8

    1 CompilationUnit: PackageDecl ImportDeclListOptional . TypeDeclListOptional
    4 ImportDeclListOptional: ImportDeclListOptional . ImportDecl

    IMPORT  shift, and go to state 9

    $default  reduce using rule 13 (TypeDeclListOptional)

    ImportDecl            go to state 10
    SingleImportDecl      go to state 11
    TypeImportDecl        go to state 12
    TypeDeclListOptional  go to state 16


State 9

    8 SingleImportDecl: IMPORT . QualifiedName SEMIC
    9                 | IMPORT . STATIC QualifiedName SEMIC
   10 TypeImportDecl: IMPORT . QualifiedName DOT MUL SEMIC
   11               | IMPORT . STATIC QualifiedName DOT MUL SEMIC

    IDENTIFIER  shift, and go to state 5
    STATIC      shift, and go to state 17

    QualifiedName  go to state 18


State 10

    4 ImportDeclListOptional: ImportDeclListOptional ImportDecl .

    $default  reduce using rule 4 (ImportDeclListOptional)


State 11

    6 ImportDecl: SingleImportDecl .

    $default  reduce using rule 6 (ImportDecl)


State 12

    7 ImportDecl: TypeImportDecl .

    $default  reduce using rule 7 (ImportDecl)


State 13

    2 CompilationUnit: ImportDeclListOptional TypeDeclListOptional .
   12 TypeDeclListOptional: TypeDeclListOptional . TypeDecl

    ABSTRACT   shift, and go to state 19
    FINAL      shift, and go to state 20
    PRIVATE    shift, and go to state 21
    PROTECTED  shift, and go to state 22
    PUBLIC     shift, and go to state 23
    STATIC     shift, and go to state 24
    STRICTFP   shift, and go to state 25
    SEMIC      shift, and go to state 26

    $end      reduce using rule 2 (CompilationUnit)
    $default  reduce using rule 192 (ClassOrInterfaceModifierListOptional)

    TypeDecl                              go to state 27
    ClassOrInterfaceModifierListOptional  go to state 28
    ClassOrInterfaceModifierList          go to state 29
    ClassOrInterfaceModifier              go to state 30


State 14

  185 QualifiedName: QualifiedName DOT . IDENTIFIER

    IDENTIFIER  shift, and go to state 31


State 15

    3 PackageDecl: PACKAGE QualifiedName SEMIC .

    $default  reduce using rule 3 (PackageDecl)


State 16

    1 CompilationUnit: PackageDecl ImportDeclListOptional TypeDeclListOptional .
   12 TypeDeclListOptional: TypeDeclListOptional . TypeDecl

    ABSTRACT   shift, and go to state 19
    FINAL      shift, and go to state 20
    PRIVATE    shift, and go to state 21
    PROTECTED  shift, and go to state 22
    PUBLIC     shift, and go to state 23
    STATIC     shift, and go to state 24
    STRICTFP   shift, and go to state 25
    SEMIC      shift, and go to state 26

    $end      reduce using rule 1 (CompilationUnit)
    $default  reduce using rule 192 (ClassOrInterfaceModifierListOptional)

    TypeDecl                              go to state 27
    ClassOrInterfaceModifierListOptional  go to state 28
    ClassOrInterfaceModifierList          go to state 29
    ClassOrInterfaceModifier              go to state 30


State 17

    9 SingleImportDecl: IMPORT STATIC . QualifiedName SEMIC
   11 TypeImportDecl: IMPORT STATIC . QualifiedName DOT MUL SEMIC

    IDENTIFIER  shift, and go to state 5

    QualifiedName  go to state 32


State 18

    8 SingleImportDecl: IMPORT QualifiedName . SEMIC
   10 TypeImportDecl: IMPORT QualifiedName . DOT MUL SEMIC
  185 QualifiedName: QualifiedName . DOT IDENTIFIER

    DOT    shift, and go to state 33
    SEMIC  shift, and go to state 34


State 19

  199 ClassOrInterfaceModifier: ABSTRACT .

    $default  reduce using rule 199 (ClassOrInterfaceModifier)


State 20

  200 ClassOrInterfaceModifier: FINAL .

    $default  reduce using rule 200 (ClassOrInterfaceModifier)


State 21

  196 ClassOrInterfaceModifier: PRIVATE .

    $default  reduce using rule 196 (ClassOrInterfaceModifier)


State 22

  197 ClassOrInterfaceModifier: PROTECTED .

    $default  reduce using rule 197 (ClassOrInterfaceModifier)


State 23

  195 ClassOrInterfaceModifier: PUBLIC .

    $default  reduce using rule 195 (ClassOrInterfaceModifier)


State 24

  198 ClassOrInterfaceModifier: STATIC .

    $default  reduce using rule 198 (ClassOrInterfaceModifier)


State 25

  201 ClassOrInterfaceModifier: STRICTFP .

    $default  reduce using rule 201 (ClassOrInterfaceModifier)


State 26

   16 TypeDecl: SEMIC .

    $default  reduce using rule 16 (TypeDecl)


State 27

   12 TypeDeclListOptional: TypeDeclListOptional TypeDecl .

    $default  reduce using rule 12 (TypeDeclListOptional)


State 28

   14 TypeDecl: ClassOrInterfaceModifierListOptional . ClassDecl
   15         | ClassOrInterfaceModifierListOptional . InterfaceDecl

    CLASS      shift, and go to state 35
    INTERFACE  shift, and go to state 36

    ClassDecl      go to state 37
    InterfaceDecl  go to state 38


State 29

  191 ClassOrInterfaceModifierListOptional: ClassOrInterfaceModifierList .
  194 ClassOrInterfaceModifierList: ClassOrInterfaceModifierList . ClassOrInterfaceModifier

    ABSTRACT   shift, and go to state 19
    FINAL      shift, and go to state 20
    PRIVATE    shift, and go to state 21
    PROTECTED  shift, and go to state 22
    PUBLIC     shift, and go to state 23
    STATIC     shift, and go to state 24
    STRICTFP   shift, and go to state 25

    $default  reduce using rule 191 (ClassOrInterfaceModifierListOptional)

    ClassOrInterfaceModifier  go to state 39


State 30

  193 ClassOrInterfaceModifierList: ClassOrInterfaceModifier .

    $default  reduce using rule 193 (ClassOrInterfaceModifierList)


State 31

  185 QualifiedName: QualifiedName DOT IDENTIFIER .

    $default  reduce using rule 185 (QualifiedName)


State 32

    9 SingleImportDecl: IMPORT STATIC QualifiedName . SEMIC
   11 TypeImportDecl: IMPORT STATIC QualifiedName . DOT MUL SEMIC
  185 QualifiedName: QualifiedName . DOT IDENTIFIER

    DOT    shift, and go to state 40
    SEMIC  shift, and go to state 41


State 33

   10 TypeImportDecl: IMPORT QualifiedName DOT . MUL SEMIC
  185 QualifiedName: QualifiedName DOT . IDENTIFIER

    IDENTIFIER  shift, and go to state 31
    MUL         shift, and go to state 42


State 34

    8 SingleImportDecl: IMPORT QualifiedName SEMIC .

    $default  reduce using rule 8 (SingleImportDecl)


State 35

   17 ClassDecl: CLASS . IDENTIFIER ClassBody
   18          | CLASS . IDENTIFIER IMPLEMENTS TypeList ClassBody

    IDENTIFIER  shift, and go to state 43


State 36

   19 InterfaceDecl: INTERFACE . IDENTIFIER InterfaceBody

    IDENTIFIER  shift, and go to state 44


State 37

   14 TypeDecl: ClassOrInterfaceModifierListOptional ClassDecl .

    $default  reduce using rule 14 (TypeDecl)


State 38

   15 TypeDecl: ClassOrInterfaceModifierListOptional InterfaceDecl .

    $default  reduce using rule 15 (TypeDecl)


State 39

  194 ClassOrInterfaceModifierList: ClassOrInterfaceModifierList ClassOrInterfaceModifier .

    $default  reduce using rule 194 (ClassOrInterfaceModifierList)


State 40

   11 TypeImportDecl: IMPORT STATIC QualifiedName DOT . MUL SEMIC
  185 QualifiedName: QualifiedName DOT . IDENTIFIER

    IDENTIFIER  shift, and go to state 31
    MUL         shift, and go to state 45


State 41

    9 SingleImportDecl: IMPORT STATIC QualifiedName SEMIC .

    $default  reduce using rule 9 (SingleImportDecl)


State 42

   10 TypeImportDecl: IMPORT QualifiedName DOT MUL . SEMIC

    SEMIC  shift, and go to state 46


State 43

   17 ClassDecl: CLASS IDENTIFIER . ClassBody
   18          | CLASS IDENTIFIER . IMPLEMENTS TypeList ClassBody

    IMPLEMENTS  shift, and go to state 47
    LBRACE      shift, and go to state 48

    ClassBody  go to state 49


State 44

   19 InterfaceDecl: INTERFACE IDENTIFIER . InterfaceBody

    LPAREN  shift, and go to state 50

    InterfaceBody  go to state 51


State 45

   11 TypeImportDecl: IMPORT STATIC QualifiedName DOT MUL . SEMIC

    SEMIC  shift, and go to state 52


State 46

   10 TypeImportDecl: IMPORT QualifiedName DOT MUL SEMIC .

    $default  reduce using rule 10 (TypeImportDecl)


State 47

   18 ClassDecl: CLASS IDENTIFIER IMPLEMENTS . TypeList ClassBody

    IDENTIFIER  shift, and go to state 53
    BOOLEAN     shift, and go to state 54
    BYTE        shift, and go to state 55
    CHAR        shift, and go to state 56
    DOUBLE      shift, and go to state 57
    FLOAT       shift, and go to state 58
    INT         shift, and go to state 59
    LONG        shift, and go to state 60
    SHORT       shift, and go to state 61

    PrimitiveType         go to state 62
    ClassOrInterfaceType  go to state 63
    TypeType              go to state 64
    TypeList              go to state 65


State 48

   20 ClassBody: LBRACE . RBRACE
   21          | LBRACE . ClassBodyDeclList RBRACE

    IDENTIFIER    shift, and go to state 66
    ABSTRACT      shift, and go to state 19
    BOOLEAN       shift, and go to state 54
    BYTE          shift, and go to state 55
    CHAR          shift, and go to state 56
    DOUBLE        shift, and go to state 57
    FINAL         shift, and go to state 20
    FLOAT         shift, and go to state 58
    INT           shift, and go to state 59
    INTERFACE     shift, and go to state 36
    LONG          shift, and go to state 60
    NATIVE        shift, and go to state 67
    PRIVATE       shift, and go to state 21
    PROTECTED     shift, and go to state 22
    PUBLIC        shift, and go to state 23
    SHORT         shift, and go to state 61
    STATIC        shift, and go to state 24
    STRICTFP      shift, and go to state 25
    SYNCHRONIZED  shift, and go to state 68
    TRANSIENT     shift, and go to state 69
    VOID          shift, and go to state 70
    VOLATILE      shift, and go to state 71
    RBRACE        shift, and go to state 72

    InterfaceDecl             go to state 73
    ClassBodyDeclList         go to state 74
    ClassBodyDecl             go to state 75
    ModifierList              go to state 76
    FieldDecl                 go to state 77
    PrimitiveType             go to state 62
    ClassOrInterfaceType      go to state 63
    TypeType                  go to state 78
    ConstructorDecl           go to state 79
    MemberDecl                go to state 80
    MethodDecl                go to state 81
    Modifier                  go to state 82
    ClassOrInterfaceModifier  go to state 83


State 49

   17 ClassDecl: CLASS IDENTIFIER ClassBody .

    $default  reduce using rule 17 (ClassDecl)


State 50

   99 InterfaceBody: LPAREN . RPAREN
  100              | LPAREN . InterfaceBodyDeclList RPAREN

    ABSTRACT      shift, and go to state 19
    CLASS         shift, and go to state 35
    FINAL         shift, and go to state 20
    INTERFACE     shift, and go to state 36
    NATIVE        shift, and go to state 67
    PRIVATE       shift, and go to state 21
    PROTECTED     shift, and go to state 22
    PUBLIC        shift, and go to state 23
    STATIC        shift, and go to state 24
    STRICTFP      shift, and go to state 25
    SYNCHRONIZED  shift, and go to state 68
    TRANSIENT     shift, and go to state 69
    VOLATILE      shift, and go to state 71
    RPAREN        shift, and go to state 84
    SEMIC         shift, and go to state 85

    ABSTRACT  [reduce using rule 113 (InterfaceMethodModifierListOptional)]
    PUBLIC    [reduce using rule 113 (InterfaceMethodModifierListOptional)]
    STATIC    [reduce using rule 113 (InterfaceMethodModifierListOptional)]
    STRICTFP  [reduce using rule 113 (InterfaceMethodModifierListOptional)]
    $default  reduce using rule 113 (InterfaceMethodModifierListOptional)
